Title text align fixed

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@
     padding-top: 140px;
     text-align: left;
     width: 300px;
-    text-align: right;
     font-size: 100px;
     color: #312A20;
     font-family: 'Yanone Kaffeesatz';
